# r2-gallery

./: .env.example  .gitignore  CLAUDE.md  DOCKER-IMPROVEMENTS.md  Dockerfile  README.md  README.zh-CN.md  docker-compose.dev.yml  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: build.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  images.db  migrate_db.py  pyproject.toml  update_image_dimensions.py
backend/src/: main.py
backend/src/api/: images.py
backend/src/core/: config.py  storage.py  sync.py
backend/src/models/: database.py  image.py
docs/: CDN-SETUP-GUIDE.md  DEPLOYMENT.md  PORT-BEST-PRACTICES.md  README.md  backend-flow-analysis.md
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  env.d.ts
frontend/src/components/: ImageSkeleton.tsx  ImageViewer.tsx  LazyImage.tsx
frontend/src/components/Toast/: Toast.tsx  ToastViewport.tsx
frontend/src/constants/: index.ts
frontend/src/hooks/: useIntersectionObserver.ts
frontend/src/pages/: BrowsePage.tsx  UploadPage.tsx
frontend/src/styles/: animations.css  waterfall.css
frontend/src/types/: index.ts
frontend/src/utils/: api.ts  format.ts  imageTransform.ts  s3.ts
src/: App.css  App.tsx  index.css
src/components/: BrowsePage.tsx  Footer.tsx  UploadPage.tsx
src/styles/: waterfall.css
